# Blink

./: .gitignore  CMakeLists.txt  README.md  main.c
renderer/: clay_renderer_raylib.c
